--- a/Sociedad tecnológica/sociedad.html
+++ b/Sociedad tecnológica/sociedad.html
@@ -21,18 +21,97 @@
         En resumen, estamos viviendo en una sociedad donde la tecnología es la protagonista, haciendo nuestras vidas más fáciles,
         emocionantes y, a veces, un poco futuristas.
     </p>
+    <p class="text">
+        Aquí el temario: 
+    </p>
     <table class="tableAlign">
         <tr>
-            <p class="tableText">
-                llLlLlLlLl
-            </p>
+            <th>
+                <p class="tableText">
+                    Mundo Inalámbrico
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Tecnología de Defensa
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Vehículos que utilizan fuentes de energía alternas
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Tecnología de Defensa
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Tecnología de Defensa
+                </p>
+            </th>
         </tr>
         <tr>
-
+            <th>
+                <button class="button" onclick="Mundo()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Defense()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Auto()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Mundo()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Defense()">Ir</button>
+            </th>
         </tr>
         <tr>
+            <th>
+                <p class="tableText">
+                    Mundo Inalámbrico
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Tecnología de Defensa
+                </p>
+            </th>
+            <th>
 
+            </th>
+            <th>
+                
+            </th>
+            <th>
+                
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <button class="button" onclick="Mundo()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Defense()">Ir</button>
+            </th>
+            <th>
+
+            </th>
+            <th>
+                <button class="button" onclick="Mundo()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Defense()">Ir</button>
+            </th>
         </tr>
     </table>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
 </body>
 </html>
