--- a/index.html
+++ b/index.html
@@ -21,17 +21,33 @@
     <p class="text">
         Como sea, ya me extendí de más así que aquí le dejo mis tareas
     </p>
-    <table>
+    <table class="tableAlign">
         <tr>
             <th>
                 <p class="tableText">
                     La sociedad tecnológica:
                 </p>
             </th>
+            <th>
+                <p class="tableText">
+                    Próxima tarea: 
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Próxima tarea: 
+                </p>
+            </th>
         </tr>
         <tr>
             <th>
-                <button class="button" onclick="SociedadTecnológica()">Ir</button>
+                <button class="button" onclick="SociedadTecnologica()">Ir</button>
+            </th>
+            <th>
+                <button class="button">Ir</button>
+            </th>
+            <th>
+                <button class="button">Ir</button>
             </th>
         </tr>
     </table>
