--- a/Sociedad tecnológica/sociedad.html
+++ b/Sociedad tecnológica/sociedad.html
@@ -38,17 +38,17 @@
             </th>
             <th>
                 <p class="tableText">
-                    Vehículos que utilizan fuentes de energía alternas
+                    Vehículos que Utilizan Fuentes de Energía Alternas
                 </p>
             </th>
             <th>
                 <p class="tableText">
-                    Tecnología de Defensa
+                    Rayos Láser
                 </p>
             </th>
             <th>
                 <p class="tableText">
-                    Tecnología de Defensa
+                    Biotecnología
                 </p>
             </th>
         </tr>
@@ -63,49 +63,41 @@
                 <button class="button" onclick="Auto()">Ir</button>
             </th>
             <th>
-                <button class="button" onclick="Mundo()">Ir</button>
+                <button class="button" onclick="Laser()">Ir</button>
             </th>
-            <th>
-                <button class="button" onclick="Defense()">Ir</button>
-            </th>
+            <th></th>
         </tr>
         <tr>
-            <th>
-                <p class="tableText">
-                    Mundo Inalámbrico
-                </p>
-            </th>
-            <th>
-                <p class="tableText">
-                    Tecnología de Defensa
-                </p>
-            </th>
-            <th>
-
-            </th>
-            <th>
-                
-            </th>
-            <th>
-                
-            </th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
             <th>
-                <button class="button" onclick="Mundo()">Ir</button>
+                <p class="tableText">Volver al Índice</p>
             </th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
             <th>
-                <button class="button" onclick="Defense()">Ir</button>
+                <button class="button" onclick="MainMenu()">Ir</button>
             </th>
-            <th>
-
-            </th>
-            <th>
-                <button class="button" onclick="Mundo()">Ir</button>
-            </th>
-            <th>
-                <button class="button" onclick="Defense()">Ir</button>
-            </th>
+            <th></th>
+            <th></th>
         </tr>
     </table>
     <div>
