Sociedad tecnologica online

--- a/Sociedad tecnológica/biobio.html
+++ b/Sociedad tecnológica/biobio.html
@@ -8,6 +8,84 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 class="subtitle">Biotecnología: La Revolución de la Vida</h1>
+    <p class="text">
+        La biotecnología, una intersección fascinante entre la biología y la tecnología, está transformando la forma en que entendemos y manipulamos los organismos vivos.
+        Desde la medicina hasta la agricultura y la industria, los avances en biotecnología están revolucionando nuestra capacidad para resolver problemas complejos y mejorar
+        la calidad de vida en todo el mundo. En este ensayo, exploraremos el impacto de la biotecnología en diversas áreas y su potencial para el futuro.
+    </p>
+    <h3 class="superSubtitle">Avances en Medicina</h1>
+    <p class="text">
+        Uno de los campos más beneficiados por la biotecnología es la medicina. La ingeniería genética ha permitido el desarrollo de terapias dirigidas que pueden corregir
+        defectos genéticos y tratar enfermedades que antes se consideraban incurables. La terapia génica, por ejemplo, ha abierto nuevas posibilidades para tratar enfermedades
+        hereditarias mediante la inserción de genes funcionales en lugar de genes defectuosos.
+    </p>
+    <p class="text">
+        Además, la biotecnología ha impulsado el desarrollo de medicamentos biológicos, como los anticuerpos monoclonales, que se utilizan para tratar enfermedades como el cáncer
+        y enfermedades autoinmunes con una precisión sin precedentes. Las vacunas, que han sido cruciales en la erradicación de enfermedades infecciosas, también han evolucionado
+        gracias a la biotecnología, como lo demuestran las vacunas de ARNm desarrolladas para combatir la pandemia de COVID-19.
+    </p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSc-qVq6XuGZO0Fh7yQRacpflRiZpGuRmV2BA&s" alt="" class="img"></img>
+    <h3 class="superSubtitle">Innovaciones en Agricultura</h3>
+    <p class="text">
+        La biotecnología agrícola ha permitido el desarrollo de cultivos genéticamente modificados (OGM) que son más resistentes a plagas, enfermedades y condiciones climáticas
+        extremas. Estos cultivos no solo mejoran el rendimiento y la eficiencia agrícola, sino que también pueden contribuir a la seguridad alimentaria global al reducir las
+        pérdidas de cosechas y aumentar la producción en áreas con condiciones adversas.
+    </p>
+    <p class="text">
+        Además, la biotecnología está jugando un papel crucial en la creación de alimentos más nutritivos. Por ejemplo, el arroz dorado, una variedad de arroz genéticamente
+        modificada, está enriquecido con betacaroteno, un precursor de la vitamina A, y tiene el potencial de combatir la deficiencia de vitamina A en regiones donde esta es
+        prevalente.
+    </p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfaNXsyW6ykkyfCHdkdKhDD6-_Os9Lt--emA&s" alt="" class="img"></img>
+    <h3 class="superSubtitle">Impacto en la Industria</h3>
+    <p class="text">
+        En la industria, la biotecnología está revolucionando la producción de productos químicos, combustibles y materiales. La biotecnología industrial, o biotecnología blanca,
+        utiliza microorganismos y enzimas para producir productos de manera más eficiente y sostenible. Por ejemplo, la producción de biocombustibles a partir de biomasa vegetal
+        ofrece una alternativa renovable a los combustibles fósiles, reduciendo la huella de carbono y ayudando a combatir el cambio climático.
+    </p>
+    <p class="text">
+        Los bioplásticos, creados a partir de materias primas renovables, son otra innovación biotecnológica que puede ayudar a reducir la dependencia del plástico derivado del
+        petróleo y disminuir el impacto ambiental de los residuos plásticos.
+    </p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLd11uPzWXAq8oHj9Z2_udDN-1OJ62F2JeAQ&s" alt="" class="img"></img>
+    <h3 class="superSubtitle">Ética y Desafíos</h3>
+    <p class="text">
+        A pesar de sus beneficios, la biotecnología también plantea desafíos éticos y sociales. La manipulación genética, especialmente en seres humanos, plantea preguntas sobre los
+        límites de la intervención científica y la naturaleza de la modificación genética. La biotecnología agrícola, por su parte, enfrenta oposición debido a preocupaciones sobre
+        la seguridad de los OGM y sus efectos en el medio ambiente y la biodiversidad.
+    </p>
+    <p class="text">
+        Además, el acceso a las tecnologías biotecnológicas puede ser desigual, lo que plantea cuestiones de justicia social y equidad. Es crucial que el desarrollo y la
+        implementación de la biotecnología se realicen de manera ética y transparente, con una consideración cuidadosa de los posibles impactos sociales y ambientales.
+    </p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCDN2ftyOvjlM5rKkaYHvEUbnlaGt0B-aBiQ&s" alt="" class="img">
+    <h3 class="superSubtitle">El Futuro de la Biotecnología</h3>
+    <p class="text">
+        El futuro de la biotecnología es prometedor y está lleno de potencial. La biología sintética, una rama emergente de la biotecnología, está llevando la manipulación genética
+        a nuevas fronteras al diseñar y construir nuevos organismos con propiedades deseadas. Este campo tiene el potencial de revolucionar áreas como la producción de energía, la
+        medicina personalizada y la agricultura sostenible.
+    </p>
+    <p class="text">
+        En conclusión, la biotecnología está transformando nuestro mundo de maneras profundas y variadas. Desde la medicina hasta la agricultura y la industria, los avances
+        biotecnológicos están mejorando la calidad de vida y ofreciendo soluciones innovadoras a desafíos globales. A medida que continuamos explorando y expandiendo las fronteras
+        de la biotecnología, es crucial hacerlo con un enfoque ético y sostenible, asegurando que los beneficios de estos avances se distribuyan equitativamente y contribuyan a un
+        futuro más saludable y sostenible para todos.
+    </p>
+    <table class="tableAlign">
+        <tr>
+            <th>
+                <p class="tableTex">Volver</p>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <button class="button" onclick="SociedadTecnologica2()">Ir</button>
+            </th>
+        </tr>
+    </table>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
 </body>
 </html>
