--- a/Sociedad tecnológica/sociedad.html
+++ b/Sociedad tecnológica/sociedad.html
@@ -65,21 +65,53 @@
             <th>
                 <button class="button" onclick="Laser()">Ir</button>
             </th>
-            <th></th>
+            <th>
+                <button class="button" onclick="Bio()">Ir</button>
+            </th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>
+                <p class="tableText">
+                    Genoma Humano
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Fibra Óptica
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Aparatos Ahorradores y Energías Alternas
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    TVHD
+                </p>
+            </th>
+            <th>
+                <p class="tableText">
+                    Tecnología Meteorológica
+                </p>
+            </th>
         </tr>
         <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>
+                <button class="button" onclick="Genoma()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Optica()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Ahorro()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="TVHD()">Ir</button>
+            </th>
+            <th>
+                <button class="button" onclick="Meteoros()">Ir</button>
+            </th>
         </tr>
         <tr>
             <th></th>
@@ -100,10 +132,8 @@
             <th></th>
         </tr>
     </table>
-    <div>
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
-    </div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
 </body>
 </html>
