--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 </head>
 <body>
     <p class="text">
-        Hola profe! Cómo esta? no le gustaría que su alumno favorito hiciera una página web donde suba todos los trabajos que tiene?
-    </p>
-    <p class="text">
-        Pues que bueno que dijo que si (Ojala le haya atinado) porque aqui estoy yo haciendole una página web para entregarle todas mis tareas :D
-    </p>
-    <p class="text">
-        Bueno, la realidad es que se me hace aburrido el tener que hacer todo en canva así que decidi hacerlo por aca :D
+        Hola profe! Cómo esta? no le gustaría que su alumno favorito hiciera una página web donde suba todos los trabajos que tiene? Pues que bueno que dijo que si (Ojala le haya
+        atinado) porque aqui estoy yo haciendole una página web para entregarle todas mis tareas. Bueno, la realidad es que se me hace aburrido el tener que hacer todo en canva así
+        que decidi hacerlo por aca :D
     </p>
     <p class="text">
         Como sea, ya me extendí de más así que aquí le dejo mis tareas
@@ -30,7 +26,7 @@
             </th>
             <th>
                 <p class="tableText">
-                    Próxima tarea: 
+                    Residuos Industriales: 
                 </p>
             </th>
             <th>
