--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="button" onclick="SociedadTecnologica()">Ir</button>
             </th>
             <th>
-                <button class="button">Ir</button>
+                <button class="button" onclick="Residuos2()">Ir</button>
             </th>
             <th>
                 <button class="button">Ir</button>
